# discord-puppeteer

./: .gitignore  README.md  command list.txt  command_list.md  pyproject.toml
src/: core.py
src/modules/: basic.py  debug.py  misc.py
src/utils/: proxy.py
