[tool.poetry]
name = "Puppeteer"
version = "0.1.0"
description = "A Discord bot for managing roleplay avatars, known as 'puppets'."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
discord = {version = "^1.0.1", allows-prereleases = true}
"discord.py" = {version = "^1.2.4", allows-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
